// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video autoPlay renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

.c7 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #666666;
  stroke: #666666;
  fill: #F6F6F6;
  stroke: #F6F6F6;
}

.c7 g {
  fill: inherit;
  stroke: inherit;
}

.c7 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c7 *[stroke*="#"],
.c7 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c7 *[fill-rule],
.c7 *[FILL-RULE],
.c7 *[fill*="#"],
.c7 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(68,68,68,0.8);
  color: rgba(255,255,255,0.85);
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1 0;
  -ms-flex: 1 0;
  flex: 1 0;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 12px;
}

.c6 {
  display: inline-block;
}

.c6:first-child:not(:last-child) {
  margin-right: 12px;
}

.c6 > * {
  vertical-align: bottom;
}

.c5 {
  cursor: pointer;
  outline: none;
  font: inherit;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  padding: 12px;
}

.c5:hover {
  background-color: rgba(221,221,221,0.5);
  color: #000000;
}

.c15 {
  cursor: pointer;
  outline: none;
  font: inherit;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
}

.c11 {
  max-width: 100%;
}

.c11 path {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c10 {
  position: relative;
}

.c14 {
  font-size: 16px;
  line-height: 1.375;
  margin: 0;
}

.c1 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  position: relative;
}

.c3 {
  -webkit-flex: 0 0;
  -ms-flex: 0 0;
  flex: 0 0;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  opacity: 1;
}

.c12 {
  cursor: pointer;
}

.c2 {
  max-width: 100%;
}

.c2::cue {
  background: rgba(0,0,0,0.7);
}

@media only screen and (min-width:700px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

@media only screen and (min-width:700px) {
  .c5 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .c15 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    onMouseEnter={[Function]}
    onMouseMove={[Function]}
    onTouchStart={[Function]}
    style={undefined}
  >
    <video
      autoPlay={true}
      className="c2"
      loop={false}
      onAbort={[Function]}
      onCanPlay={[Function]}
      onCanPlayThrough={[Function]}
      onDurationChange={[Function]}
      onEmptied={[Function]}
      onEncrypted={[Function]}
      onEnded={[Function]}
      onError={[Function]}
      onLoadStart={[Function]}
      onLoadedData={[Function]}
      onLoadedMetadata={[Function]}
      onPause={[Function]}
      onPlay={[Function]}
      onPlaying={[Function]}
      onProgress={[Function]}
      onRateChange={[Function]}
      onSeeked={[Function]}
      onSeeking={[Function]}
      onStalled={[Function]}
      onSuspend={[Function]}
      onTimeUpdate={[Function]}
      onVolumeChange={[Function]}
      onWaiting={[Function]}
    >
      <source />
      <track />
    </video>
    <div
      className="c3"
    >
      <div
        aria-label={undefined}
        className="c4"
        direction="row"
      >
        <button
          aria-label={undefined}
          className="c5"
          disabled={false}
          href={undefined}
          icon={
            <Play
              color="light-1"
            />
          }
          label={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            aria-hidden={true}
            className="c6"
          >
            <svg
              aria-label="Play"
              className="c7"
              color="light-1"
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <polygon
                fill="none"
                points="3 22 21 12 3 2"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </span>
        </button>
        <div
          aria-label={undefined}
          className="c8"
          direction="row"
        >
          <div
            aria-label={undefined}
            className="c9"
            direction="column"
          >
            <div
              className="c10"
            >
              <svg
                aria-label="Video progress"
                className="c11"
                height={12}
                preserveAspectRatio="none"
                viewBox="0 0 288 12"
                width="100%"
              >
                <path
                  d="M 0,6 L 288,6"
                  fill="none"
                  stroke="#555555"
                  strokeLinecap="square"
                  strokeWidth={12}
                />
              </svg>
              <div
                className="c12"
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                role="button"
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                tabIndex={0}
                value={undefined}
              />
            </div>
          </div>
          <div
            aria-label={undefined}
            className="c13"
            direction="column"
          >
            <span
              className="c14"
            >
              NaN:NaN
            </span>
          </div>
        </div>
        <div
          onKeyDown={[Function]}
        >
          <button
            aria-label="Open Menu"
            className="c15"
            disabled={false}
            href={undefined}
            icon={undefined}
            id={undefined}
            label={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            tabIndex="0"
            type="button"
          >
            <div
              aria-label={undefined}
              className="c16"
              direction="row"
            >
              <svg
                aria-label="Actions"
                className="c7"
                color="light-1"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M12,17.5 C15.0375661,17.5 17.5,15.0375661 17.5,12 C17.5,8.96243388 15.0375661,6.5 12,6.5 C8.96243388,6.5 6.5,8.96243388 6.5,12 C6.5,15.0375661 8.96243388,17.5 12,17.5 Z M12,6.5 L12,1 M12,23 L12,17.5 M1,12 L6.5,12 M17.5,12 L23,12 M4.4375,4.4375 L8.5625,8.5625 M15.4375,15.4375 L19.5625,19.5625 M19.5625,4.4375 L15.4375,8.5625 M8.5625,15.4375 L4.4375,19.5625"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Video controls renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

.c7 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #666666;
  stroke: #666666;
  fill: #F6F6F6;
  stroke: #F6F6F6;
}

.c7 g {
  fill: inherit;
  stroke: inherit;
}

.c7 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c7 *[stroke*="#"],
.c7 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c7 *[fill-rule],
.c7 *[FILL-RULE],
.c7 *[fill*="#"],
.c7 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c19 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #666666;
  stroke: #666666;
}

.c19 g {
  fill: inherit;
  stroke: inherit;
}

.c19 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c19 *[stroke*="#"],
.c19 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c19 *[fill-rule],
.c19 *[FILL-RULE],
.c19 *[fill*="#"],
.c19 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(68,68,68,0.8);
  color: rgba(255,255,255,0.85);
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1 0;
  -ms-flex: 1 0;
  flex: 1 0;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 12px;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  display: inline-block;
}

.c6:first-child:not(:last-child) {
  margin-right: 12px;
}

.c6 > * {
  vertical-align: bottom;
}

.c5 {
  cursor: pointer;
  outline: none;
  font: inherit;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  padding: 12px;
}

.c5:hover {
  background-color: rgba(221,221,221,0.5);
  color: #000000;
}

.c15 {
  cursor: pointer;
  outline: none;
  font: inherit;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
}

.c11 {
  max-width: 100%;
}

.c11 path {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c10 {
  position: relative;
}

.c14 {
  font-size: 16px;
  line-height: 1.375;
  margin: 0;
}

.c1 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  position: relative;
}

.c3 {
  -webkit-flex: 0 0;
  -ms-flex: 0 0;
  flex: 0 0;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  opacity: 1;
}

.c17 {
  -webkit-flex: 0 0;
  -ms-flex: 0 0;
  flex: 0 0;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  opacity: 1;
}

.c12 {
  cursor: pointer;
}

.c2 {
  max-width: 100%;
}

.c2::cue {
  background: rgba(0,0,0,0.7);
}

@media only screen and (min-width:700px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

@media only screen and (min-width:700px) {
  .c5 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .c15 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    onMouseEnter={[Function]}
    onMouseMove={[Function]}
    onTouchStart={[Function]}
    style={undefined}
  >
    <video
      autoPlay={false}
      className="c2"
      loop={false}
      onAbort={[Function]}
      onCanPlay={[Function]}
      onCanPlayThrough={[Function]}
      onDurationChange={[Function]}
      onEmptied={[Function]}
      onEncrypted={[Function]}
      onEnded={[Function]}
      onError={[Function]}
      onLoadStart={[Function]}
      onLoadedData={[Function]}
      onLoadedMetadata={[Function]}
      onPause={[Function]}
      onPlay={[Function]}
      onPlaying={[Function]}
      onProgress={[Function]}
      onRateChange={[Function]}
      onSeeked={[Function]}
      onSeeking={[Function]}
      onStalled={[Function]}
      onSuspend={[Function]}
      onTimeUpdate={[Function]}
      onVolumeChange={[Function]}
      onWaiting={[Function]}
    >
      <source />
      <track />
    </video>
    <div
      className="c3"
    >
      <div
        aria-label={undefined}
        className="c4"
        direction="row"
      >
        <button
          aria-label={undefined}
          className="c5"
          disabled={false}
          href={undefined}
          icon={
            <Play
              color="light-1"
            />
          }
          label={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            aria-hidden={true}
            className="c6"
          >
            <svg
              aria-label="Play"
              className="c7"
              color="light-1"
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <polygon
                fill="none"
                points="3 22 21 12 3 2"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </span>
        </button>
        <div
          aria-label={undefined}
          className="c8"
          direction="row"
        >
          <div
            aria-label={undefined}
            className="c9"
            direction="column"
          >
            <div
              className="c10"
            >
              <svg
                aria-label="Video progress"
                className="c11"
                height={12}
                preserveAspectRatio="none"
                viewBox="0 0 288 12"
                width="100%"
              >
                <path
                  d="M 0,6 L 288,6"
                  fill="none"
                  stroke="#555555"
                  strokeLinecap="square"
                  strokeWidth={12}
                />
              </svg>
              <div
                className="c12"
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                role="button"
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                tabIndex={0}
                value={undefined}
              />
            </div>
          </div>
          <div
            aria-label={undefined}
            className="c13"
            direction="column"
          >
            <span
              className="c14"
            >
              NaN:NaN
            </span>
          </div>
        </div>
        <div
          onKeyDown={[Function]}
        >
          <button
            aria-label="Open Menu"
            className="c15"
            disabled={false}
            href={undefined}
            icon={undefined}
            id={undefined}
            label={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            tabIndex="0"
            type="button"
          >
            <div
              aria-label={undefined}
              className="c16"
              direction="row"
            >
              <svg
                aria-label="Actions"
                className="c7"
                color="light-1"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M12,17.5 C15.0375661,17.5 17.5,15.0375661 17.5,12 C17.5,8.96243388 15.0375661,6.5 12,6.5 C8.96243388,6.5 6.5,8.96243388 6.5,12 C6.5,15.0375661 8.96243388,17.5 12,17.5 Z M12,6.5 L12,1 M12,23 L12,17.5 M1,12 L6.5,12 M17.5,12 L23,12 M4.4375,4.4375 L8.5625,8.5625 M15.4375,15.4375 L19.5625,19.5625 M19.5625,4.4375 L15.4375,8.5625 M8.5625,15.4375 L4.4375,19.5625"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    style={undefined}
  >
    <video
      autoPlay={false}
      className="c2"
      loop={false}
      onAbort={[Function]}
      onCanPlay={[Function]}
      onCanPlayThrough={[Function]}
      onDurationChange={[Function]}
      onEmptied={[Function]}
      onEncrypted={[Function]}
      onEnded={[Function]}
      onError={[Function]}
      onLoadStart={[Function]}
      onLoadedData={[Function]}
      onLoadedMetadata={[Function]}
      onPause={[Function]}
      onPlay={[Function]}
      onPlaying={[Function]}
      onProgress={[Function]}
      onRateChange={[Function]}
      onSeeked={[Function]}
      onSeeking={[Function]}
      onStalled={[Function]}
      onSuspend={[Function]}
      onTimeUpdate={[Function]}
      onVolumeChange={[Function]}
      onWaiting={[Function]}
    >
      <source />
      <track />
    </video>
    <div
      className="c17"
    >
      <div
        aria-label={undefined}
        className="c18"
        direction="row"
      >
        <button
          aria-label={undefined}
          className="c5"
          disabled={false}
          href={undefined}
          icon={
            <Play
              color={undefined}
            />
          }
          label={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            aria-hidden={true}
            className="c6"
          >
            <svg
              aria-label="Play"
              className="c19"
              color={undefined}
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <polygon
                fill="none"
                points="3 22 21 12 3 2"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </span>
        </button>
        <div
          aria-label={undefined}
          className="c8"
          direction="row"
        >
          <div
            aria-label={undefined}
            className="c9"
            direction="column"
          >
            <div
              className="c10"
            >
              <svg
                aria-label="Video progress"
                className="c11"
                height={12}
                preserveAspectRatio="none"
                viewBox="0 0 288 12"
                width="100%"
              >
                <path
                  d="M 0,6 L 288,6"
                  fill="none"
                  stroke="#F6F6F6"
                  strokeLinecap="square"
                  strokeWidth={12}
                />
              </svg>
              <div
                className="c12"
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                role="button"
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                tabIndex={0}
                value={undefined}
              />
            </div>
          </div>
          <div
            aria-label={undefined}
            className="c13"
            direction="column"
          >
            <span
              className="c14"
            >
              NaN:NaN
            </span>
          </div>
        </div>
        <div
          onKeyDown={[Function]}
        >
          <button
            aria-label="Open Menu"
            className="c15"
            disabled={false}
            href={undefined}
            icon={undefined}
            id={undefined}
            label={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            tabIndex="0"
            type="button"
          >
            <div
              aria-label={undefined}
              className="c16"
              direction="row"
            >
              <svg
                aria-label="Actions"
                className="c19"
                color={undefined}
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M12,17.5 C15.0375661,17.5 17.5,15.0375661 17.5,12 C17.5,8.96243388 15.0375661,6.5 12,6.5 C8.96243388,6.5 6.5,8.96243388 6.5,12 C6.5,15.0375661 8.96243388,17.5 12,17.5 Z M12,6.5 L12,1 M12,23 L12,17.5 M1,12 L6.5,12 M17.5,12 L23,12 M4.4375,4.4375 L8.5625,8.5625 M15.4375,15.4375 L19.5625,19.5625 M19.5625,4.4375 L15.4375,8.5625 M8.5625,15.4375 L4.4375,19.5625"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Video fit renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

.c7 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #666666;
  stroke: #666666;
  fill: #F6F6F6;
  stroke: #F6F6F6;
}

.c7 g {
  fill: inherit;
  stroke: inherit;
}

.c7 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c7 *[stroke*="#"],
.c7 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c7 *[fill-rule],
.c7 *[FILL-RULE],
.c7 *[fill*="#"],
.c7 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(68,68,68,0.8);
  color: rgba(255,255,255,0.85);
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1 0;
  -ms-flex: 1 0;
  flex: 1 0;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 12px;
}

.c6 {
  display: inline-block;
}

.c6:first-child:not(:last-child) {
  margin-right: 12px;
}

.c6 > * {
  vertical-align: bottom;
}

.c5 {
  cursor: pointer;
  outline: none;
  font: inherit;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  padding: 12px;
}

.c5:hover {
  background-color: rgba(221,221,221,0.5);
  color: #000000;
}

.c15 {
  cursor: pointer;
  outline: none;
  font: inherit;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
}

.c11 {
  max-width: 100%;
}

.c11 path {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c10 {
  position: relative;
}

.c14 {
  font-size: 16px;
  line-height: 1.375;
  margin: 0;
}

.c1 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  position: relative;
}

.c3 {
  -webkit-flex: 0 0;
  -ms-flex: 0 0;
  flex: 0 0;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  opacity: 1;
}

.c12 {
  cursor: pointer;
}

.c2 {
  max-width: 100%;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  min-height: 0;
  object-fit: cover;
}

.c2::cue {
  background: rgba(0,0,0,0.7);
}

.c17 {
  max-width: 100%;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  min-height: 0;
  object-fit: contain;
}

.c17::cue {
  background: rgba(0,0,0,0.7);
}

@media only screen and (min-width:700px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

@media only screen and (min-width:700px) {
  .c5 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .c15 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    onMouseEnter={[Function]}
    onMouseMove={[Function]}
    onTouchStart={[Function]}
    style={undefined}
  >
    <video
      autoPlay={false}
      className="c2"
      loop={false}
      onAbort={[Function]}
      onCanPlay={[Function]}
      onCanPlayThrough={[Function]}
      onDurationChange={[Function]}
      onEmptied={[Function]}
      onEncrypted={[Function]}
      onEnded={[Function]}
      onError={[Function]}
      onLoadStart={[Function]}
      onLoadedData={[Function]}
      onLoadedMetadata={[Function]}
      onPause={[Function]}
      onPlay={[Function]}
      onPlaying={[Function]}
      onProgress={[Function]}
      onRateChange={[Function]}
      onSeeked={[Function]}
      onSeeking={[Function]}
      onStalled={[Function]}
      onSuspend={[Function]}
      onTimeUpdate={[Function]}
      onVolumeChange={[Function]}
      onWaiting={[Function]}
    >
      <source />
      <track />
    </video>
    <div
      className="c3"
    >
      <div
        aria-label={undefined}
        className="c4"
        direction="row"
      >
        <button
          aria-label={undefined}
          className="c5"
          disabled={false}
          href={undefined}
          icon={
            <Play
              color="light-1"
            />
          }
          label={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            aria-hidden={true}
            className="c6"
          >
            <svg
              aria-label="Play"
              className="c7"
              color="light-1"
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <polygon
                fill="none"
                points="3 22 21 12 3 2"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </span>
        </button>
        <div
          aria-label={undefined}
          className="c8"
          direction="row"
        >
          <div
            aria-label={undefined}
            className="c9"
            direction="column"
          >
            <div
              className="c10"
            >
              <svg
                aria-label="Video progress"
                className="c11"
                height={12}
                preserveAspectRatio="none"
                viewBox="0 0 288 12"
                width="100%"
              >
                <path
                  d="M 0,6 L 288,6"
                  fill="none"
                  stroke="#555555"
                  strokeLinecap="square"
                  strokeWidth={12}
                />
              </svg>
              <div
                className="c12"
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                role="button"
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                tabIndex={0}
                value={undefined}
              />
            </div>
          </div>
          <div
            aria-label={undefined}
            className="c13"
            direction="column"
          >
            <span
              className="c14"
            >
              NaN:NaN
            </span>
          </div>
        </div>
        <div
          onKeyDown={[Function]}
        >
          <button
            aria-label="Open Menu"
            className="c15"
            disabled={false}
            href={undefined}
            icon={undefined}
            id={undefined}
            label={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            tabIndex="0"
            type="button"
          >
            <div
              aria-label={undefined}
              className="c16"
              direction="row"
            >
              <svg
                aria-label="Actions"
                className="c7"
                color="light-1"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M12,17.5 C15.0375661,17.5 17.5,15.0375661 17.5,12 C17.5,8.96243388 15.0375661,6.5 12,6.5 C8.96243388,6.5 6.5,8.96243388 6.5,12 C6.5,15.0375661 8.96243388,17.5 12,17.5 Z M12,6.5 L12,1 M12,23 L12,17.5 M1,12 L6.5,12 M17.5,12 L23,12 M4.4375,4.4375 L8.5625,8.5625 M15.4375,15.4375 L19.5625,19.5625 M19.5625,4.4375 L15.4375,8.5625 M8.5625,15.4375 L4.4375,19.5625"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    onMouseEnter={[Function]}
    onMouseMove={[Function]}
    onTouchStart={[Function]}
    style={undefined}
  >
    <video
      autoPlay={false}
      className="c17"
      loop={false}
      onAbort={[Function]}
      onCanPlay={[Function]}
      onCanPlayThrough={[Function]}
      onDurationChange={[Function]}
      onEmptied={[Function]}
      onEncrypted={[Function]}
      onEnded={[Function]}
      onError={[Function]}
      onLoadStart={[Function]}
      onLoadedData={[Function]}
      onLoadedMetadata={[Function]}
      onPause={[Function]}
      onPlay={[Function]}
      onPlaying={[Function]}
      onProgress={[Function]}
      onRateChange={[Function]}
      onSeeked={[Function]}
      onSeeking={[Function]}
      onStalled={[Function]}
      onSuspend={[Function]}
      onTimeUpdate={[Function]}
      onVolumeChange={[Function]}
      onWaiting={[Function]}
    >
      <source />
      <track />
    </video>
    <div
      className="c3"
    >
      <div
        aria-label={undefined}
        className="c4"
        direction="row"
      >
        <button
          aria-label={undefined}
          className="c5"
          disabled={false}
          href={undefined}
          icon={
            <Play
              color="light-1"
            />
          }
          label={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            aria-hidden={true}
            className="c6"
          >
            <svg
              aria-label="Play"
              className="c7"
              color="light-1"
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <polygon
                fill="none"
                points="3 22 21 12 3 2"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </span>
        </button>
        <div
          aria-label={undefined}
          className="c8"
          direction="row"
        >
          <div
            aria-label={undefined}
            className="c9"
            direction="column"
          >
            <div
              className="c10"
            >
              <svg
                aria-label="Video progress"
                className="c11"
                height={12}
                preserveAspectRatio="none"
                viewBox="0 0 288 12"
                width="100%"
              >
                <path
                  d="M 0,6 L 288,6"
                  fill="none"
                  stroke="#555555"
                  strokeLinecap="square"
                  strokeWidth={12}
                />
              </svg>
              <div
                className="c12"
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                role="button"
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                tabIndex={0}
                value={undefined}
              />
            </div>
          </div>
          <div
            aria-label={undefined}
            className="c13"
            direction="column"
          >
            <span
              className="c14"
            >
              NaN:NaN
            </span>
          </div>
        </div>
        <div
          onKeyDown={[Function]}
        >
          <button
            aria-label="Open Menu"
            className="c15"
            disabled={false}
            href={undefined}
            icon={undefined}
            id={undefined}
            label={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            tabIndex="0"
            type="button"
          >
            <div
              aria-label={undefined}
              className="c16"
              direction="row"
            >
              <svg
                aria-label="Actions"
                className="c7"
                color="light-1"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M12,17.5 C15.0375661,17.5 17.5,15.0375661 17.5,12 C17.5,8.96243388 15.0375661,6.5 12,6.5 C8.96243388,6.5 6.5,8.96243388 6.5,12 C6.5,15.0375661 8.96243388,17.5 12,17.5 Z M12,6.5 L12,1 M12,23 L12,17.5 M1,12 L6.5,12 M17.5,12 L23,12 M4.4375,4.4375 L8.5625,8.5625 M15.4375,15.4375 L19.5625,19.5625 M19.5625,4.4375 L15.4375,8.5625 M8.5625,15.4375 L4.4375,19.5625"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Video loop renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

.c7 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #666666;
  stroke: #666666;
  fill: #F6F6F6;
  stroke: #F6F6F6;
}

.c7 g {
  fill: inherit;
  stroke: inherit;
}

.c7 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c7 *[stroke*="#"],
.c7 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c7 *[fill-rule],
.c7 *[FILL-RULE],
.c7 *[fill*="#"],
.c7 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(68,68,68,0.8);
  color: rgba(255,255,255,0.85);
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1 0;
  -ms-flex: 1 0;
  flex: 1 0;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 12px;
}

.c6 {
  display: inline-block;
}

.c6:first-child:not(:last-child) {
  margin-right: 12px;
}

.c6 > * {
  vertical-align: bottom;
}

.c5 {
  cursor: pointer;
  outline: none;
  font: inherit;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  padding: 12px;
}

.c5:hover {
  background-color: rgba(221,221,221,0.5);
  color: #000000;
}

.c15 {
  cursor: pointer;
  outline: none;
  font: inherit;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
}

.c11 {
  max-width: 100%;
}

.c11 path {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c10 {
  position: relative;
}

.c14 {
  font-size: 16px;
  line-height: 1.375;
  margin: 0;
}

.c1 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  position: relative;
}

.c3 {
  -webkit-flex: 0 0;
  -ms-flex: 0 0;
  flex: 0 0;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  opacity: 1;
}

.c12 {
  cursor: pointer;
}

.c2 {
  max-width: 100%;
}

.c2::cue {
  background: rgba(0,0,0,0.7);
}

@media only screen and (min-width:700px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

@media only screen and (min-width:700px) {
  .c5 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .c15 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    onMouseEnter={[Function]}
    onMouseMove={[Function]}
    onTouchStart={[Function]}
    style={undefined}
  >
    <video
      autoPlay={false}
      className="c2"
      loop={true}
      onAbort={[Function]}
      onCanPlay={[Function]}
      onCanPlayThrough={[Function]}
      onDurationChange={[Function]}
      onEmptied={[Function]}
      onEncrypted={[Function]}
      onEnded={[Function]}
      onError={[Function]}
      onLoadStart={[Function]}
      onLoadedData={[Function]}
      onLoadedMetadata={[Function]}
      onPause={[Function]}
      onPlay={[Function]}
      onPlaying={[Function]}
      onProgress={[Function]}
      onRateChange={[Function]}
      onSeeked={[Function]}
      onSeeking={[Function]}
      onStalled={[Function]}
      onSuspend={[Function]}
      onTimeUpdate={[Function]}
      onVolumeChange={[Function]}
      onWaiting={[Function]}
    >
      <source />
      <track />
    </video>
    <div
      className="c3"
    >
      <div
        aria-label={undefined}
        className="c4"
        direction="row"
      >
        <button
          aria-label={undefined}
          className="c5"
          disabled={false}
          href={undefined}
          icon={
            <Play
              color="light-1"
            />
          }
          label={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            aria-hidden={true}
            className="c6"
          >
            <svg
              aria-label="Play"
              className="c7"
              color="light-1"
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <polygon
                fill="none"
                points="3 22 21 12 3 2"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </span>
        </button>
        <div
          aria-label={undefined}
          className="c8"
          direction="row"
        >
          <div
            aria-label={undefined}
            className="c9"
            direction="column"
          >
            <div
              className="c10"
            >
              <svg
                aria-label="Video progress"
                className="c11"
                height={12}
                preserveAspectRatio="none"
                viewBox="0 0 288 12"
                width="100%"
              >
                <path
                  d="M 0,6 L 288,6"
                  fill="none"
                  stroke="#555555"
                  strokeLinecap="square"
                  strokeWidth={12}
                />
              </svg>
              <div
                className="c12"
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                role="button"
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                tabIndex={0}
                value={undefined}
              />
            </div>
          </div>
          <div
            aria-label={undefined}
            className="c13"
            direction="column"
          >
            <span
              className="c14"
            >
              NaN:NaN
            </span>
          </div>
        </div>
        <div
          onKeyDown={[Function]}
        >
          <button
            aria-label="Open Menu"
            className="c15"
            disabled={false}
            href={undefined}
            icon={undefined}
            id={undefined}
            label={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            tabIndex="0"
            type="button"
          >
            <div
              aria-label={undefined}
              className="c16"
              direction="row"
            >
              <svg
                aria-label="Actions"
                className="c7"
                color="light-1"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M12,17.5 C15.0375661,17.5 17.5,15.0375661 17.5,12 C17.5,8.96243388 15.0375661,6.5 12,6.5 C8.96243388,6.5 6.5,8.96243388 6.5,12 C6.5,15.0375661 8.96243388,17.5 12,17.5 Z M12,6.5 L12,1 M12,23 L12,17.5 M1,12 L6.5,12 M17.5,12 L23,12 M4.4375,4.4375 L8.5625,8.5625 M15.4375,15.4375 L19.5625,19.5625 M19.5625,4.4375 L15.4375,8.5625 M8.5625,15.4375 L4.4375,19.5625"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Video mute renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

.c7 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #666666;
  stroke: #666666;
  fill: #F6F6F6;
  stroke: #F6F6F6;
}

.c7 g {
  fill: inherit;
  stroke: inherit;
}

.c7 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c7 *[stroke*="#"],
.c7 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c7 *[fill-rule],
.c7 *[FILL-RULE],
.c7 *[fill*="#"],
.c7 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(68,68,68,0.8);
  color: rgba(255,255,255,0.85);
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1 0;
  -ms-flex: 1 0;
  flex: 1 0;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 12px;
}

.c6 {
  display: inline-block;
}

.c6:first-child:not(:last-child) {
  margin-right: 12px;
}

.c6 > * {
  vertical-align: bottom;
}

.c5 {
  cursor: pointer;
  outline: none;
  font: inherit;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  padding: 12px;
}

.c5:hover {
  background-color: rgba(221,221,221,0.5);
  color: #000000;
}

.c15 {
  cursor: pointer;
  outline: none;
  font: inherit;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
}

.c11 {
  max-width: 100%;
}

.c11 path {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c10 {
  position: relative;
}

.c14 {
  font-size: 16px;
  line-height: 1.375;
  margin: 0;
}

.c1 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  position: relative;
}

.c3 {
  -webkit-flex: 0 0;
  -ms-flex: 0 0;
  flex: 0 0;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  opacity: 1;
}

.c12 {
  cursor: pointer;
}

.c2 {
  max-width: 100%;
}

.c2::cue {
  background: rgba(0,0,0,0.7);
}

@media only screen and (min-width:700px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

@media only screen and (min-width:700px) {
  .c5 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .c15 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    onMouseEnter={[Function]}
    onMouseMove={[Function]}
    onTouchStart={[Function]}
    style={undefined}
  >
    <video
      autoPlay={false}
      className="c2"
      loop={false}
      onAbort={[Function]}
      onCanPlay={[Function]}
      onCanPlayThrough={[Function]}
      onDurationChange={[Function]}
      onEmptied={[Function]}
      onEncrypted={[Function]}
      onEnded={[Function]}
      onError={[Function]}
      onLoadStart={[Function]}
      onLoadedData={[Function]}
      onLoadedMetadata={[Function]}
      onPause={[Function]}
      onPlay={[Function]}
      onPlaying={[Function]}
      onProgress={[Function]}
      onRateChange={[Function]}
      onSeeked={[Function]}
      onSeeking={[Function]}
      onStalled={[Function]}
      onSuspend={[Function]}
      onTimeUpdate={[Function]}
      onVolumeChange={[Function]}
      onWaiting={[Function]}
    >
      <source />
      <track />
    </video>
    <div
      className="c3"
    >
      <div
        aria-label={undefined}
        className="c4"
        direction="row"
      >
        <button
          aria-label={undefined}
          className="c5"
          disabled={false}
          href={undefined}
          icon={
            <Play
              color="light-1"
            />
          }
          label={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            aria-hidden={true}
            className="c6"
          >
            <svg
              aria-label="Play"
              className="c7"
              color="light-1"
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <polygon
                fill="none"
                points="3 22 21 12 3 2"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </span>
        </button>
        <div
          aria-label={undefined}
          className="c8"
          direction="row"
        >
          <div
            aria-label={undefined}
            className="c9"
            direction="column"
          >
            <div
              className="c10"
            >
              <svg
                aria-label="Video progress"
                className="c11"
                height={12}
                preserveAspectRatio="none"
                viewBox="0 0 288 12"
                width="100%"
              >
                <path
                  d="M 0,6 L 288,6"
                  fill="none"
                  stroke="#555555"
                  strokeLinecap="square"
                  strokeWidth={12}
                />
              </svg>
              <div
                className="c12"
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                role="button"
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                tabIndex={0}
                value={undefined}
              />
            </div>
          </div>
          <div
            aria-label={undefined}
            className="c13"
            direction="column"
          >
            <span
              className="c14"
            >
              NaN:NaN
            </span>
          </div>
        </div>
        <div
          onKeyDown={[Function]}
        >
          <button
            aria-label="Open Menu"
            className="c15"
            disabled={false}
            href={undefined}
            icon={undefined}
            id={undefined}
            label={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            tabIndex="0"
            type="button"
          >
            <div
              aria-label={undefined}
              className="c16"
              direction="row"
            >
              <svg
                aria-label="Actions"
                className="c7"
                color="light-1"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M12,17.5 C15.0375661,17.5 17.5,15.0375661 17.5,12 C17.5,8.96243388 15.0375661,6.5 12,6.5 C8.96243388,6.5 6.5,8.96243388 6.5,12 C6.5,15.0375661 8.96243388,17.5 12,17.5 Z M12,6.5 L12,1 M12,23 L12,17.5 M1,12 L6.5,12 M17.5,12 L23,12 M4.4375,4.4375 L8.5625,8.5625 M15.4375,15.4375 L19.5625,19.5625 M19.5625,4.4375 L15.4375,8.5625 M8.5625,15.4375 L4.4375,19.5625"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Video renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

.c7 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #666666;
  stroke: #666666;
  fill: #F6F6F6;
  stroke: #F6F6F6;
}

.c7 g {
  fill: inherit;
  stroke: inherit;
}

.c7 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c7 *[stroke*="#"],
.c7 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c7 *[fill-rule],
.c7 *[FILL-RULE],
.c7 *[fill*="#"],
.c7 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(68,68,68,0.8);
  color: rgba(255,255,255,0.85);
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1 0;
  -ms-flex: 1 0;
  flex: 1 0;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 12px;
}

.c6 {
  display: inline-block;
}

.c6:first-child:not(:last-child) {
  margin-right: 12px;
}

.c6 > * {
  vertical-align: bottom;
}

.c5 {
  cursor: pointer;
  outline: none;
  font: inherit;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  padding: 12px;
}

.c5:hover {
  background-color: rgba(221,221,221,0.5);
  color: #000000;
}

.c15 {
  cursor: pointer;
  outline: none;
  font: inherit;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
}

.c11 {
  max-width: 100%;
}

.c11 path {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c10 {
  position: relative;
}

.c14 {
  font-size: 16px;
  line-height: 1.375;
  margin: 0;
}

.c1 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  position: relative;
}

.c3 {
  -webkit-flex: 0 0;
  -ms-flex: 0 0;
  flex: 0 0;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  opacity: 1;
}

.c12 {
  cursor: pointer;
}

.c2 {
  max-width: 100%;
}

.c2::cue {
  background: rgba(0,0,0,0.7);
}

@media only screen and (min-width:700px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

@media only screen and (min-width:700px) {
  .c5 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .c15 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    onMouseEnter={[Function]}
    onMouseMove={[Function]}
    onTouchStart={[Function]}
    style={undefined}
  >
    <video
      autoPlay={false}
      className="c2"
      loop={false}
      onAbort={[Function]}
      onCanPlay={[Function]}
      onCanPlayThrough={[Function]}
      onDurationChange={[Function]}
      onEmptied={[Function]}
      onEncrypted={[Function]}
      onEnded={[Function]}
      onError={[Function]}
      onLoadStart={[Function]}
      onLoadedData={[Function]}
      onLoadedMetadata={[Function]}
      onPause={[Function]}
      onPlay={[Function]}
      onPlaying={[Function]}
      onProgress={[Function]}
      onRateChange={[Function]}
      onSeeked={[Function]}
      onSeeking={[Function]}
      onStalled={[Function]}
      onSuspend={[Function]}
      onTimeUpdate={[Function]}
      onVolumeChange={[Function]}
      onWaiting={[Function]}
    >
      <source />
      <track />
    </video>
    <div
      className="c3"
    >
      <div
        aria-label={undefined}
        className="c4"
        direction="row"
      >
        <button
          aria-label={undefined}
          className="c5"
          disabled={false}
          href={undefined}
          icon={
            <Play
              color="light-1"
            />
          }
          label={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            aria-hidden={true}
            className="c6"
          >
            <svg
              aria-label="Play"
              className="c7"
              color="light-1"
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <polygon
                fill="none"
                points="3 22 21 12 3 2"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </span>
        </button>
        <div
          aria-label={undefined}
          className="c8"
          direction="row"
        >
          <div
            aria-label={undefined}
            className="c9"
            direction="column"
          >
            <div
              className="c10"
            >
              <svg
                aria-label="Video progress"
                className="c11"
                height={12}
                preserveAspectRatio="none"
                viewBox="0 0 288 12"
                width="100%"
              >
                <path
                  d="M 0,6 L 288,6"
                  fill="none"
                  stroke="#555555"
                  strokeLinecap="square"
                  strokeWidth={12}
                />
              </svg>
              <div
                className="c12"
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                role="button"
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                tabIndex={0}
                value={undefined}
              />
            </div>
          </div>
          <div
            aria-label={undefined}
            className="c13"
            direction="column"
          >
            <span
              className="c14"
            >
              NaN:NaN
            </span>
          </div>
        </div>
        <div
          onKeyDown={[Function]}
        >
          <button
            aria-label="Open Menu"
            className="c15"
            disabled={false}
            href={undefined}
            icon={undefined}
            id={undefined}
            label={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            tabIndex="0"
            type="button"
          >
            <div
              aria-label={undefined}
              className="c16"
              direction="row"
            >
              <svg
                aria-label="Actions"
                className="c7"
                color="light-1"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M12,17.5 C15.0375661,17.5 17.5,15.0375661 17.5,12 C17.5,8.96243388 15.0375661,6.5 12,6.5 C8.96243388,6.5 6.5,8.96243388 6.5,12 C6.5,15.0375661 8.96243388,17.5 12,17.5 Z M12,6.5 L12,1 M12,23 L12,17.5 M1,12 L6.5,12 M17.5,12 L23,12 M4.4375,4.4375 L8.5625,8.5625 M15.4375,15.4375 L19.5625,19.5625 M19.5625,4.4375 L15.4375,8.5625 M8.5625,15.4375 L4.4375,19.5625"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
